# lemola_osv2

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain  rust-toolchain.toml  setup.sh
.github/workflows/: ci.yml
bootloader/: Cargo.toml  rust-toolchain.toml
bootloader/src/: main.rs
common/: Cargo.toml
common/.cargo/: config.toml
common/src/: lib.rs  types.rs
gen_font/: Cargo.toml
gen_font/resources/: hankaku.txt
gen_font/src/: lib.rs
gen_font/src/snapshots/: gen_font__snapshot.snap
kernel/: Cargo.toml  x86_64-lemolaos-eabi.json
kernel-lib/: Cargo.toml  rust-toolchain.toml
kernel-lib/src/: alloc.rs  allocator.rs  futures.rs  layer.rs  lib.rs  logger.rs  mutex.rs  pixel.rs  render.rs  shapes.rs  write_to.rs
kernel-lib/src/allocator/: bump_allocator.rs  fixed_length_allocator.rs  lib.rs
kernel/.cargo/: config.toml
kernel/src/: alloc.rs  font.rs  graphics.rs  interrupts.rs  lib.rs  lifegame.rs  main.rs  memory.rs  multitasking.rs  pci.rs  serial.rs  usb.rs  xhci.rs
kernel/src/alloc/: alloc.rs
kernel/src/interrupts/: messages.rs
kernel/src/multitasking/: executor.rs  task.rs
kernel/src/pci/: pci.rs  register.rs
kernel/src/usb/: class_driver.rs  descriptor.rs  device.rs  setup_packet.rs  traits.rs
kernel/src/usb/class_driver/: callbacks.rs  hub.rs  keyboard.rs  mouse.rs
kernel/src/xhci/: command_ring.rs  controller.rs  device_manager.rs  event_ring.rs  port.rs  task.rs  transfer_ring.rs  trb.rs  user_event_ring.rs
ovmf/: lemola_os_ovmf_vars.fd
