[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { version = "0.7.2", features = ["nightly"], default-features = false}
uefi = { version = "0.17.0", features = ["exts"] }
uefi-services = "0.14.0"
