[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { version = "0.7.2", features = ["nightly"], default-features = false}
iced-x86 = { version = "1.18.0", features = ["no_std", "decoder", "intel"], default-features = false }
uefi = { version = "0.17.0", features = ["exts", "logger"] }
uefi-services = { version = "0.14.0" }
common = { path = "../common" }
log = "0.4.19"

[dev-dependencies]
proc-macro2 = "1.0.64"