[package]
name = "gen_font"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
anyhow = "1.0.71"
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = "2.0.15"

[dev-dependencies]
insta = "1.29.0"
