[package]
name = "kernel-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = []

[dependencies]
gen_font = { path = "../gen_font" }
common = { path = "../common" }
log = "0.4.17"
once_cell = { version = "1.17.1", default-features = false }
spin = "0.9.8"
