[package]
name = "kernel-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = []

[dependencies]
gen_font = { path = "../gen_font" }
common = { path = "../common" }
dummy-waker = "1.1.0"
spin = "0.9.8"
once_cell = { version = "1.18.0", default-features = false }
log = "0.4.19"

[dev-dependencies]
rand = "0.8.5"
proc-macro2 = "1.0.64"
