[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
bit_field = "0.10.2"
bootkbd = "0.2.2"
common = { path = "../common" }
crossbeam-queue = {version = "0.3.8", default-features = false}
gen_font = { path = "../gen_font" }
kernel-lib = { path = "../kernel-lib" }
log = "0.4.17"
once_cell = { version = "1.17.1", default-features = false }
spin = "0.9.8"
static_assertions = "1.1.0"
usb-host = "0.1.3"
x86_64 = "0.14.10"
xhci = "0.9.2"

[features]
std = []
default = []
